--- a/templates/success.html
+++ b/templates/success.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Success</title>
+    <title>Success Vandan</title>
     <!-- Favicons -->
     <link href="./static/img/favicon.ico" rel="icon" />
     <link href="./static/img/apple-touch-icon.png" rel="apple-touch-icon" />
@@ -135,25 +135,20 @@
         display: inline-block;
         margin-left: 10px;
     }
+    
+    .button {
+        width: 200px;
+        margin-right: 30px;
+    }
 </style>
 
 
-<body oncontextmenu="return false" class="snippet-body">
-</body>
-
-<a href="#myModal" data-toggle="modal">Click me</a>
-
-
-<!-- Modal HTML -->
-<div id="myModal" class="modal fade">
+<body>
     <div class="modal-dialog modal-confirm">
         <div class="modal-content">
             <div class="modal-header">
                 <div class="icon-box ib">
                     <i class="material-icons">&#xE876;</i>
-                    <!-- <span class="material-symbols-outlined">
-                        error
-                        </span> -->
                 </div>
                 <h4 class="modal-title w-100">Awesome!</h4>
             </div>
@@ -164,14 +159,13 @@
             </div>
             <div class="modal-footer">
                 <form action="/" method="post">
-                    <button type="submit" class="btn bn btn-success btn-block" data-dismiss="modal"
-                        style="width: 200px; margin-right: 30px;">
+                    <button type="submit" class="btn bn button btn-success btn-block" data-dismiss="modal">
                         OK
                     </button>
                 </form>
             </div>
         </div>
     </div>
-    </body>
+</body>
 
 </html>
