--- a/templates/failure.html
+++ b/templates/failure.html
@@ -128,17 +128,24 @@
         display: inline-block;
         margin-left: 10px;
     }
+
+    .button {
+        width: 200px;
+        margin-right: 30px;
+    }
+
+    .spn {
+        text-align: center;
+    }
+
+    .voterid {
+        color: rgb(241, 68, 0);
+        text-align: center;
+    }
 </style>
 
 
-<body oncontextmenu="return false" class="snippet-body">
-</body>
-
-<a href="#myModal" data-toggle="modal">Click me</a>
-
-
-<!-- Modal HTML -->
-<div id="myModal" class="modal fade">
+<body>
     <div class="modal-dialog modal-confirm">
         <div class="modal-content">
             <div class="modal-header">
@@ -152,14 +159,13 @@
             </div>
             <div class="modal-body">
                 <p class="text-center" >
-                    Vote not registered for {{User}} with ID <h2 style="color: rgb(241, 68, 0); text-align: center;"> {{ID}}</h2> 
-                    <br> <span class="text-center" style="text-align: center;"> Reason: {{Reason}} </span>
+                    Vote can't be registered for {{User}} with ID <h2 class="voterid"> {{ID}}</h2> 
+                    <br> <span class="text-center spn"> Reason: {{Reason}} </span>
                 </p>
             </div>
             <div class="modal-footer">
-                <form action="/" method="post">
-                    <button type="submit" class="btn btn-success btn-block" data-dismiss="modal"
-                        style="width: 200px; margin-right: 30px;">
+                <form action="#" method="post">
+                    <button type="submit" class="btn btn-success button btn-block" data-dismiss="modal">
                         Retry
                     </button>
                 </form>
@@ -167,7 +173,6 @@
             </div>
         </div>
     </div>
-</div>
 </body>
 
 </html>
