--- a/templates/success.html
+++ b/templates/success.html
@@ -46,7 +46,7 @@
     }
 
     .modal-confirm .modal-content {
-        padding: 20px;
+        padding: auto;
         border-radius: 5px;
         border: none;
     }
@@ -133,12 +133,12 @@
 
     .trigger-btn {
         display: inline-block;
-        margin-left: 10px;
+        margin-left: auto;
     }
     
     .button {
         width: 200px;
-        margin-right: 30px;
+        margin-right: auto;
     }
 </style>
 
