--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     rel="stylesheet" />
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link type="text/css" href="{{ url_for('static', filename='/css/style.css') }}" rel="stylesheet" />
+  <link type="text/css" href="../static/css/style.css" rel="stylesheet" />
 </head>
 
 <body>
