Co-authored-by: vandan7177 <vandan7177@users.noreply.github.com> Co-authored-by: joshidevg <joshidevg@users.noreply.github.com> Co-authored-by: Kashyap Halavadia <Kashyap28@users.noreply.github.com>

--- a/templates/failure.html
+++ b/templates/failure.html
@@ -164,8 +164,8 @@
                 </p>
             </div>
             <div class="modal-footer">
-                <form action="#" method="post">
-                    <button type="submit" class="btn btn-success button btn-block" data-dismiss="modal">
+                <form action="/" method="get">
+                    <button type="submit" name = "Failure" value="OK" class="btn bn button btn-success btn-block" data-dismiss="modal">
                         Retry
                     </button>
                 </form>
