--- a/templates/index.html
+++ b/templates/index.html
@@ -46,8 +46,8 @@
                     <button type="submit" name="submit" value="mine"  class="btn-get-started scrollto">Mine</button>
                   </div>
                   <div class="d-flex">
-                    <button type="submit" value="" class="btn-get-started scrollto">Add New Voter</button>
-                    <button type="submit" value="" class="btn-get-started scrollto">Delete Voter</button>
+                    <button type="submit" name = "submit" value="newVoter" class="btn-get-started scrollto">Add New Voter</button>
+                    <button type="submit" name = "submit" value="result" class="btn-get-started scrollto">See Full Chain</button>
                   </div>
                 </form>
             </div>
