--- a/templates/mine.html
+++ b/templates/mine.html
@@ -10,15 +10,15 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="./assets/img/favicon.ico" rel="icon" />
-    <link href="./assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="../static/img/favicon.ico" rel="icon" />
+    <link href="../static/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
         rel="stylesheet" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="./assets/css/style.css" rel="stylesheet" />
+    <link href="../static/css/style.css" rel="stylesheet" />
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
@@ -151,15 +151,15 @@
     
 
     <main class="form-signin w-100 m-auto">
-        <form action="/Miner" method="post">
-            <img src="./assets/img/login-icon-3058.png" alt="" width="140" height="120">
+        <form action="/mine" method="POST">
+            <img src="../static/img/login-icon-3058.png" alt="" width="140" height="120">
             <h1 class="h3 mb-3">Miner Login</h1>
             <h2 class="h4 mb-3 fw-normal">Enter MOID:</h2>
             <h5 class="h6 mb-3 fw-normal">[Note that it should start from
                 <span style="color: red;">MOID</span>]
             </h5>
             <div class="form-floating">
-                <input type="input" name="voterId" class="form-control aa" id="floatingInput" placeholder="VOIDxxx"
+                <input type="input" name="MinerID" class="form-control aa" id="floatingInput" placeholder="MOIDxxx"
                     required>
                 <label for="floatingInput">Enter MinerID</label>
             </div>
@@ -169,12 +169,21 @@
                 <label for="floatingPassword">Write 'Confirm'</label>
             </div>
 
-            <button class="w-100 btn btn-lg btn-info type=" submit"> Login </button>
+            <button class="w-100 btn btn-lg btn-info type=" submit" value = "newMine"> Login </button>
 
             <div class="mt-5 mb-3 text-body-secondary">
                 &copy; Copyright <strong><span>Online Voting System 2023-24</span></strong>. All Rights Reserved.
             </div>
         </form>
+        <script>
+            var form = document.querySelector('form');
+            form.addEventListener('submit', function(event) {
+                if (!form.candidate.value) {
+                    event.preventDefault();
+                    document.getElementById('error').textContent = 'Please select one of the field';
+                }
+            });
+        </script>
     </main>
 
 
