--- a/templates/success.html
+++ b/templates/success.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Success Vandan</title>
+    <title>Success</title>
     <!-- Favicons -->
     <link href="./static/img/favicon.ico" rel="icon" />
     <link href="./static/img/apple-touch-icon.png" rel="apple-touch-icon" />
