solved a bug related to miner and added comments

--- a/templates/mine.html
+++ b/templates/mine.html
@@ -151,7 +151,7 @@
     
 
     <main class="form-signin w-100 m-auto">
-        <form action="/mine" method="POST">
+        <form action="#" method="POST">
             <img src="../static/img/login-icon-3058.png" alt="" width="140" height="120">
             <h1 class="h3 mb-3">Miner Login</h1>
             <h2 class="h4 mb-3 fw-normal">Enter MOID:</h2>
@@ -169,7 +169,7 @@
                 <label for="floatingPassword">Write 'Confirm'</label>
             </div>
 
-            <button class="w-100 btn btn-lg btn-info type=" submit" value = "newMine"> Login </button>
+            <button class="w-100 btn btn-lg btn-info" type="submit" name="submit" value = "newMine"> Login </button>
 
             <div class="mt-5 mb-3 text-body-secondary">
                 &copy; Copyright <strong><span>Online Voting System 2023-24</span></strong>. All Rights Reserved.
