Finished the base website. Some minor changes left

--- a/templates/newVoter.html
+++ b/templates/newVoter.html
@@ -134,7 +134,7 @@
     >
 
     <main class="form-signin w-100 m-auto">
-        <form action="/newVoter" method="post">
+        <form action="#" method="post">
             <img class="mb-4" src="https://scribie.com/assets/front/illustrations/Welcome-to-scribie-512x391.svg" alt=""
                 width="140" height="120">
             <h1 class="h3 mb-3">Add New Voter</h1>
