--- a/templates/success.html
+++ b/templates/success.html
@@ -154,7 +154,7 @@
             </div>
             <div class="modal-body">
                 <p class="text-center">
-                    Vote by {{UserID}} added successfully. Check your email for detials.
+                    Vote by {{UserID}} added successfully. Check your email for details.
                 </p>
             </div>
             <div class="modal-footer">
