--- a/templates/admin.html
+++ b/templates/admin.html
@@ -37,7 +37,7 @@
               <div>
                 <h1>Online Voting System</h1>
                   <h2>
-                    Powered by Blockchain.
+                    Admin Page
                   </h2>
               </div>
                 <form action = "#" method = "POST">
@@ -53,7 +53,7 @@
             </div>
 
             <!-- ----------------------- -->
-            <div id="header">
+            <!-- <div id="header">
               <div class=" container d-flex flex-column align-items-center">
                 <h2 style="margin-bottom:10px">Voting Ends in:</h2>
                 <div class="countdown d-flex justify-content-center" data-count="2023/5/11">
@@ -75,10 +75,10 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="col-lg-6 order-1 order-lg-2 hero-img">
-            <img src="./static/img/Voting.jpg" class="img-fluid animated" alt="" />
+            <img src="./static/img/login-icon-3058.png" alt="" width = "560", height = "480"/>
           </div>
         </div>
       </div>
