fixed bug in failure page

--- a/templates/failure.html
+++ b/templates/failure.html
@@ -160,7 +160,7 @@
             <div class="modal-body">
                 <p class="text-center" >
                     Vote can't be registered for {{User}} with ID <h2 class="voterid"> {{ID}}</h2> 
-                    <br> <span class="text-center spn"> Reason: {{Reason}} </span>
+                    <br> <span class="text-center spn"> Reason: {{reason}} </span>
                 </p>
             </div>
             <div class="modal-footer">
